--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   equatable: ^2.0.5
   country_codes: ^2.2.0
   intl_phone_field: ^3.1.0
+  local_auth: ^2.1.2
 
 dev_dependencies:
   flutter_test:
