--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   country_codes: ^2.2.0
   intl_phone_field: ^3.1.0
   local_auth: ^2.1.2
+  
+  geolocator: ^9.0.2
+ 
 
 dev_dependencies:
   flutter_test:
